Able to change visibility of all labels in status panel (except Ready label)

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -129,6 +129,18 @@
             <setting name="singleInstance" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="statusPanelLength" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="statusPanelLines" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="statusPanelModified" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="statusPanelSize" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
