Added message with recommendations to "Encryption" settings tab.

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -141,6 +141,9 @@
             <setting name="statusPanelSize" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="encryptionToolTip" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
