Added hint to "Encryption" settings tab

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -141,7 +141,7 @@
             <setting name="statusPanelSize" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="encryptionToolTip" serializeAs="String">
+            <setting name="encryptionHint" serializeAs="String">
                 <value>True</value>
             </setting>
         </Crypto_Notepad.Properties.Settings>
