Minor functionality improvements in "Password generator" window
- Added icon to the title bar;
- Saving password parameters after window closing;
- Button "Generate" disabling when the password length is less than 8 or more than 128 or when all checkboxes are unchecked;

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -144,6 +144,21 @@
             <setting name="encryptionHint" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="passwordGeneratorLowercase" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="passwordGeneratorUppercase" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="passwordGeneratorNumeric" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="passwordGeneratorSpecial" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="passwordGeneratorLength" serializeAs="String">
+                <value>40</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
