Minor design/functionality changes in "About" window
- Removed app logo;
-  Able to get (copied to clipboard) debug info by clicking to app version text;
- Left only the main information about the app;

--- a/Crypto Notepad/Crypto Notepad.csproj
+++ b/Crypto Notepad/Crypto Notepad.csproj
@@ -115,6 +115,9 @@
       <DependentUpon>ChangeKeyForm.cs</DependentUpon>
     </Compile>
     <Compile Include="EncryptedString.cs" />
+    <Compile Include="HideCaretRichTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +134,7 @@
     <Compile Include="ExRichTextBox.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="OSVersionInfoClass.cs" />
     <Compile Include="PasswordGeneratorFrom.cs">
       <SubType>Form</SubType>
     </Compile>
