Improved password generator
- Minor design changes;
- Added able to copy all list of generated passwords;
- Added able to copy last password in list;
- Added ability to specify the number of generated passwords [1-1000];

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -159,6 +159,9 @@
             <setting name="passwordGeneratorLength" serializeAs="String">
                 <value>40</value>
             </setting>
+            <setting name="passwordGeneratorNumberOfStrings" serializeAs="String">
+                <value>10</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
