--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -162,6 +162,9 @@
             <setting name="passwordGeneratorNumberOfStrings" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="TheSalt" serializeAs="String">
+                <value />
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
