--- a/Crypto Notepad/Crypto Notepad.csproj
+++ b/Crypto Notepad/Crypto Notepad.csproj
@@ -201,7 +201,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Updater.exe" />
-    <None Include="bin\Debug\Ionic.Zip.dll" />
     <Content Include="Notepad_Lock.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -237,6 +236,7 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
