Extended types of special characters #47

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -163,7 +163,13 @@
                 <value>10</value>
             </setting>
             <setting name="TheSalt" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="passwordGeneratorBrackets" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="passwordGeneratorAdditional" serializeAs="String">
+                <value>False</value>
             </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
