--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -171,6 +171,9 @@
             <setting name="passwordGeneratorAdditional" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="statusPanelReadonly" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
