Auto lock if the app is inactive #48

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -171,6 +171,9 @@
             <setting name="passwordGeneratorAdditional" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="lockTimeout" serializeAs="String">
+                <value />
+            </setting>
             <setting name="statusPanelReadonly" serializeAs="String">
                 <value>True</value>
             </setting>
