Added word wrap indicator to the status panel

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -177,6 +177,9 @@
             <setting name="statusPanelReadonly" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="statusPanelWordWrap" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
