Auto-clear clipboard after copy text from the editor

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -180,6 +180,12 @@
             <setting name="statusPanelWordWrap" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="clipboardClearTime" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="statusPanelClipboard" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
