Added able to disable all shortcut keys

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -186,6 +186,9 @@
             <setting name="statusPanelClipboard" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="shortcutKeys" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
