Added able to auto-clear clipboard on app close

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -186,6 +186,9 @@
             <setting name="statusPanelClipboard" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="clearClipboardAtClose" serializeAs="String">
+                <value>False</value>
+            </setting>
             <setting name="shortcutKeys" serializeAs="String">
                 <value>True</value>
             </setting>
