Clipboard auto-clear progress bar is enabled by default

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -184,7 +184,7 @@
                 <value />
             </setting>
             <setting name="statusPanelClipboard" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="clearClipboardAtClose" serializeAs="String">
                 <value>False</value>
