--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,11 +2,11 @@
 
 github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 patreon: # Replace with a single Patreon username
-open_collective: # Replace with a single Open Collective username
+open_collective: crypto-notepad
 ko_fi: sigmanor
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: sigmanor
 issuehunt: #
 otechie: # Replace with a single Otechie username
-custom: paypal.me/sigmanor
+custom:
