--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -192,6 +192,9 @@
             <setting name="shortcutKeys" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="openTxtUnencrypted" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
