--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -12,7 +12,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup>
     <userSettings>
         <Crypto_Notepad.Properties.Settings>
-            <setting name="editroForeColor" serializeAs="String">
+            <setting name="editorForeColor" serializeAs="String">
                 <value>Black</value>
             </setting>
             <setting name="editorBackColor" serializeAs="String">
@@ -193,6 +193,9 @@
                 <value>True</value>
             </setting>
             <setting name="openTxtUnencrypted" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="trayMenu" serializeAs="String">
                 <value>False</value>
             </setting>
         </Crypto_Notepad.Properties.Settings>
