Added Paste Board function #53

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -198,6 +198,9 @@
             <setting name="trayMenu" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="statusPanelPasteboard" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
     </userSettings>
 </configuration>
