--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: 
 issuehunt: #
 otechie: # Replace with a single Otechie username
-custom: [BTC-17ke3H9hSV4FxNZL8NYCq6dv7cxC6Bj4NG, ETH-0xeca3d94e41a6c9cc00df528cc797751f986cc6e1]
+custom: https://github.com/Crypto-Notepad/Crypto-Notepad/wiki/Support-the-project
