--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -9,4 +9,4 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: 
 issuehunt: #
 otechie: # Replace with a single Otechie username
-custom: https://github.com/Crypto-Notepad/Crypto-Notepad/wiki/Support-the-project
+custom: https://www.paypal.com/donate/?hosted_button_id=JD8VFJT82ZY66
