--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,11 +2,11 @@
 
 github: # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, user2]
 patreon: # Replace with a single Patreon username
-open_collective: crypto-notepad
+open_collective: #
 ko_fi: 
 tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 community_bridge: # Replace with a single Community Bridge project-name e.g., cloud-foundry
 liberapay: 
 issuehunt: #
 otechie: # Replace with a single Otechie username
-custom: https://www.paypal.com/donate/?hosted_button_id=JD8VFJT82ZY66
+custom: https://github.com/Crypto-Notepad/Crypto-Notepad/wiki/Support-the-project
